--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="https://docs.mbktechstudio.com/Assets/project.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <link rel="icon" type="image/x-icon" href="https://mbktechstudio.com/Assets/Images/dgicon.svg">
+    <link rel="icon" type="image/x-icon" href="https://mbktechstudio.com/Assets/Images/Icon/dgicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -16,7 +16,7 @@
         <div class="navbar">
             <div class="logo">
                 <div class="image">
-                    <img src="Assets/Images/dg.svg" alt="" />
+                    <img src="https://mbktechstudio.com/Assets/Images/Icon/dg.svg" alt="" />
                 </div>
                 <div class="text">
                     <a href="https://mbktechstudio.com">MBK Tech Studio</a>
